# CG_Project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  camera.cpp  drawer.cpp  drawer.h  engine.cpp  group.cpp  group.h  light.cpp  main.cpp  material.cpp  parser.cpp  parser.h  point.cpp  shape.cpp  tinyxlm2.cpp  transformation.cpp  transformation.h
engine/headers/: camera.h  group.h  light.h  material.h  parser.h  point.h  shape.h  transformation.h
files/: box.3d  cone.3d  plane.3d  sphere.3d
generator/: bezier.cpp  box.cpp  box.h  cone.cpp  cone.h  generator.cpp  main.cpp  plane.cpp  plane.h  sphere.cpp  sphere.h  torus.cpp  torus.h
generator/headers/: bezier.h  box.h  cone.h  plane.h  sphere.h  torus.h
src/: point.cpp  point.h  shape.cpp  shape.h
xmlfiles/: box.xml  cone.xml  converter.py  example0.xml  example1.xml  example2.xml  plane.xml  solar.xml  solarNasa.xml  solarSmall.xml  sphere.xml  test.xml
